<resources>
    <string name="app_name">awbw</string>
    <string name="appium_with_browserstack">Appium with BrowserStack</string>
    <string name="test1">Test1</string>
    <string name="test2">Test2</string>
    <string name="test3">Test3</string>
    <string name="confirm">Confirm</string>
    <string name="confirmation">Confirmation</string>
    <string name="test_1">Test 1</string>
    <string name="test_2">Test 2</string>
    <string name="wrong">Wrong</string>
    <string name="correct">Correct</string>
    <string name="back_to_start">Back to start</string>
    <string name="thisViewShouldAppear">This view should appear after taping on confirm button</string>
    <string name="i_agree">I agree</string>
    <string name="test_3">Test 3</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="youLoggedIn">You are logged in!</string>
    <string name="incorrect_credentials">Incorrect credentials</string>
</resources>