<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.CorrectAction">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/testTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_1" />

            <TextView
                android:id="@+id/confirmationText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="48dp"
                android:text="@string/thisViewShouldAppear"
                android:maxLines="10"
              />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="200dp" />

            <Button
                android:id="@+id/backToStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_to_start" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>